# mail-box

./: .gitignore  Cargo.toml  README.md  build-release.sh  push-and-run-docker-github-image.txt  test-send-mail.sh
src/: main.rs
