[package]
name = "mail-box"
version = "1.0.6"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
mongodb = "3.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rcgen = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
tokio-rustls = "0.26"

[lints.rust]
linker_messages = "allow"

